--- a/Interface/NewUnits/NewUnits/NewUnits.csproj
+++ b/Interface/NewUnits/NewUnits/NewUnits.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="HeroesLib">
-      <HintPath>..\..\HeroesLib\HeroesLib\bin\Debug\netstandard2.0\HeroesLib.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\..\HeroesLib\HeroesLib\HeroesLib.csproj" />
   </ItemGroup>
 
 </Project>
